Fix bugs and buggy commands